# planning

./: .gitignore  .gitmodules  README.md
rohit/: vader_single_arm_planner_rohit.cpp
src/vader_planner/: CMakeLists.txt  package.xml
src/vader_planner/launch/: vader_PR2_dual.launch  vader_PR3_single.launch  vader_pepper_to_gazebo.launch  vader_xarm_planner_gazebo_rviz.launch
src/vader_planner/scripts/: cam_transform_publisher.py  vader_pepper_publisher.py  vader_single_arm_planner_chomp.cpp
src/vader_planner/src/: vader_PR2_planner.cpp  vader_PR3_planner.cpp  vader_dual_arm_planner_coll_avoid_abhi.cpp  vader_pepper_to_POI.cpp  vader_single_arm_planner.cpp
src/vader_planning/: CMakeLists.txt  package.xml
src/vader_planning/launch/: _EXAMPLE_xarm7_helloworld.launch.py
src/vader_planning/src/: vader_helloworld.cpp
uf_robot_moveit_config/config/: kinematics.yaml  ompl_planning.yaml
uf_robot_moveit_config/config/dual_xarm7/: controllers.yaml  kinematics.yaml  ompl_planning.yaml
uf_robot_moveit_config/config/xarm7/: kinematics.yaml  ompl_planning.yaml
uf_robot_moveit_config/launch/: __move_group.launch  __moveit_rviz.launch  __moveit_rviz_common.launch  __planning_context.launch  __planning_context_dual.launch  __planning_pipeline_chomp.launch.xml  _dual_robot_moveit_realmove.launch  dual_xarm7_moveit_realmove.launch
vader_planner/: CMakeLists.txt  README_PLANNER_TESTER.md  ReadMe.md  ompl_testing_results.csv  package.xml
vader_planner/archived/launch_archived/: vader_PR4_realHW.launch  vader_PR4_single_sim.launch  vader_dual_arm_coll_avoid_abhi.launch  vader_pepper_to_gazebo.launch  xarm_planner_realHW.launch
vader_planner/archived/scripts_archived/: vader_pepper_publisher.py
vader_planner/archived/src_archived/: vader_pepper_to_POI.cpp  vader_single_arm_planner_PC.cpp  vader_single_arm_planner_pgtg copy.cpp  vader_single_arm_planner_pgtg.cpp  vader_single_arm_planner_pgtg_TT.cpp
vader_planner/config/: planner_tester_ompl.yaml
vader_planner/include/utils/: utils.h  vader_cost_objective.h
vader_planner/launch/: moveit_real_arm_configurations.launch  planner.rviz  planner_tester.launch  vader_PR4_keerthi_test.launch  vader_PR4_realHW.launch  vader_PR4_single_sim.launch  vader_SVD_dual_sim.launch  vader_SVD_single_realHW.launch  vader_SVD_single_sim.launch  vader_dual_real.launch  vader_dual_xarm7_beside_table.launch  vader_parallel_dual_sim.launch
vader_planner/launch/tests/: collision_object_utils_tests.launch  gazebo_killer_test.launch  hello_world.launch  vader_cost_objective.launch
vader_planner/launch/tests/setups/: _moveit_gazebo_dual_arm_horizontal_test_setup.launch  _moveit_gazebo_dual_arm_vertical_test_setup.launch  _moveit_gazebo_single_arm_test_setup.launch  _moveit_rviz_dual_arm_horizontal_test_setup.launch  _moveit_rviz_dual_arm_test_setup.launch  _moveit_rviz_single_arm_test_setup.launch
vader_planner/scripts/: cam_transform_publisher.py  run_planner_tester.sh  test_planner_tester_setup.sh
vader_planner/src/: UnitTestVisualisation.ipynb  cutter_logic_test.cpp  planner_tester.cpp  vader_parallel_dual_planner.cpp  vader_single_arm_planner_PC_withrot.cpp  vader_single_arm_planner_chomp.cpp  vader_single_arm_planner_pgtg.cpp  vader_svd_dual_arm_planner.cpp  vader_svd_single_arm_planner.cpp  wall_planner_tester.cpp  xarm_simple_planner.cpp
vader_planner/src/archived/: planner_tester.cpp  vader_svd_single_arm_planner.cpp
vader_planner/src/tests/: collision_object_utils_tests.cpp
vader_planner/src/utils/: gazebo_assassin.cpp  utils.cpp  vader_cost_objective.cpp
vader_planner/srv/: exec_plan.srv  joint_plan.srv
vader_planner/test/: additional_source  example_test.py  example_test.test
xarm7_moveit_config/config/: kinematics.yaml  ompl_planning.yaml
xarm7_moveit_config/launch/: chomp_planning_pipeline.launch.xml  move_group.launch  moveit_rviz.launch  realMove_exec.launch
xarm_planner/: CMakeLists.txt
xarm_planner/launch/: vader_dual_arm_coll_avoid_abhi.launch  vader_xarm_planner_gazebo_rviz.launch
xarm_planner/src/: vader_dual_arm_planner_coll_avoid_abhi.cpp  vader_single_arm_planner_rohit.cpp
