<?xml version="1.0"?>
<package format="2">
  <name>vader_planner</name>
  <version>0.0.0</version>
  <description>The vader_planner package</description>

  <maintainer email="vader@vader.com">TODO</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>vader_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>gazebo_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>pluginlib</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_ros_perception</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>vader_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>tf</build_depend>
  
  <build_depend>gazebo_ros</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  
  <export>
    <gazebo_ros gazebo_media_path="${prefix}" />
    <gazebo_ros gazebo_model_path="${prefix}/models" />
  </export>
</package>
